fix: update header styling and improve text shadow effect for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ header {
   display: auto;
 }
 
+
+@import url(https://fonts.googleapis.com/css?family=Righteous);
+
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -59,6 +62,7 @@ html, body {
   height: 100%;
   }
   body {
+    text-align: center;
     background-color: hsla(230,40%,50%,1);
     }
   body:before {
@@ -69,42 +73,38 @@ html, body {
     height: 100%;
     }
 
-    /* Name styling */
-.name {
+h1 {
   display: inline-block;
   color: white;
-  font-size: 2em; 
+  font-family: 'Righteous', serif;
+  font-size: 12em; 
   text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
-  position: relative;
-  margin: 0;
-}
-
-.name:after {
-  content: attr(data-shadow);
-  position: absolute;
-  top: .06em; 
-  left: .06em;
-  z-index: -1;
-  text-shadow: none;
-  background-image:
-    linear-gradient(
-      45deg,
-      transparent 45%,
-      hsla(48,20%,90%,1) 45%,
-      hsla(48,20%,90%,1) 55%,
-      transparent 0
-    );
-  background-size: .05em .05em;
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shad-anim 15s linear infinite;
-}
+  }
+  h1:after {
+    content: attr(data-shadow);
+    position: absolute;
+    top: .06em; left: .06em;
+    z-index: -1;
+    text-shadow: none;
+    background-image:
+      linear-gradient(
+        45deg,
+        transparent 45%,
+        hsla(48,20%,90%,1) 45%,
+        hsla(48,20%,90%,1) 55%,
+        transparent 0
+        );
+    background-size: .05em .05em;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
+    animation: shad-anim 15s linear infinite;
+    }
 
 @keyframes shad-anim {
   0% {background-position: 0 0}
-  100% {background-position: 100% -100%}
-}
+  0% {background-position: 100% -100%}
+  }
 
 nav a {
   margin-left: 16px;
